more fixes to the venue

--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -63,16 +63,36 @@
 				</div>
 
 				<!--  Templates   -->
-				<div class="tabs-panel" id="template-events" style="border-left:1px solid #bfc1c3; border-right:1px solid #bfc1c3;">
+				<div class="tabs-panel" id="template-events" style="border-top:1px solid #bfc1c3;">
 					<div class="tabs-panel-inner">
 
+						<br>
+						<br>
+
+						<p>You don't have any templates.</p>
+
+						<form action="/create-event/new" method="get" class="form">
+
+							<div class="form-group">
+								<input type="submit" class="button-secondary" value="Create template">
+							</div>
+
+						</form>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
 					</div>
 				</div>
 
 				<!--   Past   -->
-				<div class="tabs-panel" id="past-events" style="border-left:1px solid #bfc1c3; border-right:1px solid #bfc1c3;">
+				<div class="tabs-panel" id="past-events" style="border-top:1px solid #bfc1c3;">
 					<div class="tabs-panel-inner">
+						<br>
+						<br>
 
+						<p>You don't have any past events.</p>
 					</div>
 				</div>
 
