--- a/app/views/includes/draft-events.html
+++ b/app/views/includes/draft-events.html
@@ -44,7 +44,7 @@
     <br>
     <br>
 
-    <p>You don't have any live events right now.</p>
+    <p>You don't have any draft events right now.</p>
 
     <form action="/create-event/new" method="get" class="form">
 
