fixes to cloning

--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -42,7 +42,7 @@
 				  <textarea class="form-control" name="full-address-holder" id="full-address-holder" rows="6" style="width: 50%; " ></textarea>
 
 
-				  <p style="white-space: pre-wrap;" style="display:none">
+				  <p style="white-space: pre-wrap; display:none">
 					  <span id="premise"></span>
 					  <span id="subpremise"></span>
 
