--- a/app/views/includes/draft-events.html
+++ b/app/views/includes/draft-events.html
@@ -14,7 +14,7 @@
             <div class="panel panel-border-narrow">
               <p>
                 <a href="#">Edit event</a> <br>
-                <a href="/clone-event">Clone event</a>   <br>
+                <a href="/clone-event/{{itemRow}}">Clone event</a>   <br>
                 <a href="#">Close registrations</a> <br>
                 <a href="#">Delete event</a>
               </p>
