--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -90,7 +90,7 @@
 				  <dt class="cya-question">
 					  Attendee places
 				  </dt>
-				  <dd class="cya-answer"   style="white-space: pre-wrap;">
+				  <dd class="cya-answer">
 					  {{ data['attendee-quantity'] }}
 				  </dd>
 				  <dd class="cya-change">
@@ -104,9 +104,7 @@
 				  <dt class="cya-question">
 					  Message displayed when all tickets are sold out
 				  </dt>
-				  <dd class="cya-answer">
-					  {{ data['sold-out-message'] }}
-				  </dd>
+				  <dd class="cya-answer" style="white-space: pre-wrap;">{{ data['sold-out-message'] }}</dd>
 				  <dd class="cya-change">
 					  <a href="/create-event/change-attendees">
 						  Change
@@ -218,13 +216,9 @@
 
 
 
-
-
-
-
 		  <div class="form-group" style="margin-top:40px">
 			  <input type="submit" class="button" value="Preview event page">
-			  <p style="margin-top:30px"><a href="/create-event/venue-onwards">Account home</a></p>
+			  <p style="margin-top:30px"><a href="/account">Account home</a></p>
 		  </div>
 
 	  </form>
