--- a/app/views/includes/draft-events.html
+++ b/app/views/includes/draft-events.html
@@ -2,18 +2,19 @@
 <!--  MACRO TO MAKE EACH DRAFT LINE ITEM -->
 {% macro draftEvent(itemRow) %}
 <tr>
+
   <th scope="row" style="padding-top:18px; padding-bottom: 11px;">{{ session.eventsDraft[itemRow][0] }}<br>
     <table style="margin-top: 0px;">
       <thead>
       <tr>
+        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/summary-data/{{itemRow}}">View summary</a></td>
         <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="#">View event page</a></td>
-        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="#">Monitor event</a></td>
         <td valign="top" style="width:40%; border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 0px;">
           <details style="display:inline;">
             <summary><span class="summary">More options</span></summary>
             <div class="panel panel-border-narrow">
               <p>
-                <a href="#">Edit event</a> <br>
+                <a href="/summary-data/{{itemRow}}">Edit event</a> <br>
                 <a href="/clone-event/{{itemRow}}">Clone event</a>   <br>
                 <a href="#">Close registrations</a> <br>
                 <a href="#">Delete event</a>
@@ -49,7 +50,7 @@
     <form action="/create-event/new" method="get" class="form">
 
       <div class="form-group">
-        <input type="submit" class="button-secondary" value="Create new event">
+        <input type="submit" class="button" value="Create new event">
       </div>
 
     </form>
@@ -85,6 +86,17 @@
       {% if session.eventsDraftBoolean[2] %}
         {{ draftEvent(2) }}
       {% endif %}
+
+      <!-- EVENT THREE  -->
+      {% if session.eventsDraftBoolean[3] %}
+      {{ draftEvent(3) }}
+      {% endif %}
+
+      <!-- EVENT THREE  -->
+      {% if session.eventsDraftBoolean[4] %}
+      {{ draftEvent(4) }}
+      {% endif %}
+
 
       </tbody>
     </table>
