--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -52,7 +52,7 @@
 			  {% endif %}
 
 				  <label class="form-label-bold">
-					  Quantity of tickets
+					  Event capacity
 					  {% if errorAttendee %}
 						  <span class="error-message">
 							  Error message about personal details goes here
@@ -81,7 +81,7 @@
 			  <!--  message user will see when all tickets are gone -->
 			  <div class="form-group" style="margin-top:0px; margin-bottom:0px">
 				  <label class="form-label-bold" for="sold-out-message">
-					Text displayed when tickets are sold out (optional)
+					  Message when event reaches capacity (optional)
 				  </label>
 				  <textarea class="form-control" name="sold-out-message" id="sold-out-message" rows="2" style="width: 100%;"></textarea>
 			  </div>
