--- a/app/views/create-event/images.html
+++ b/app/views/create-event/images.html
@@ -55,7 +55,7 @@
 
 			  <div class="form-group" style="margin-top:10px; height:150px" id="new-image-area">
 				  <label class="form-label-bold">
-					  Main image of event
+					  Main event image
 				  </label>
 				  <div style="margin-top:5px">
 				  	<input type="submit" class="button-secondary" value="Choose an image" id="main-button-image"
@@ -64,7 +64,7 @@
 					<div style="margin-bottom:25px; display:none "  id="image-area" >
 						<img src="/public/images/exportingheroimagesmall.jpg" style="width:240px;height:100px;">
 						<p style="margin-bottom:25px;">
-							<a href="#">Select a different image</a>
+							<a href="#">Choose a different image</a>
 						</p>
 					</div>
 
