--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -19,7 +19,7 @@
 	  </div>
 
 	  <h1 class="heading-large" style="margin-top:15px">
-        Venue
+		  Where will the event take place?
       </h1>
 
 	  <form action="/create-event/venue-onwards" method="get" class="form">
