--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -203,7 +203,7 @@
 
 		  <div class="form-group" style="margin-top:20px">
 			  <input type="submit" class="button" value="Continue">
-			  <p style="margin-top:30px"><a href="/create-event/summary">There is no limit</a></p>
+			  <!-- <p style="margin-top:30px"><a href="/create-event/summary">There is no limit</a></p>  -->
 		  </div>
 
 
