--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -88,6 +88,24 @@
 		  </fieldset>
 
 
+		  <details role="group">
+			  <summary role="button" aria-controls="details-content-0" aria-expanded="false">
+				  <span class="summary">Attendee details automatically collected</span></summary>
+			  <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
+				  <p>During registration, all attendees are required to provide:</p>
+				  <ul class="list list-bullet">
+					  <li>Full name</li>
+					  <li>Full address</li>
+					  <li>Phone number</li>
+					  <li>Email address</li>
+					  <li>Company name</li>
+					  <li>Primary sector</li>
+				  </ul>
+			  </div>
+		  </details>
+
+			<br>
+
 		  <fieldset class="form-group inline">
 				  <!--  Addtional questions that the registering user need to answer  -->
 				  <div class="form-group" style="margin-top:0px; margin-bottom:0px">
@@ -165,16 +183,6 @@
 
 						  <input type="submit" id="add-question-button" class="button-secondary" value="Add a question" onclick="showAnotherQuestion()">
 							-->
-
-
-
-
-
-
-
-
-
-
 
 
 
