started work on preview

--- a/app/views/includes/draft-events.html
+++ b/app/views/includes/draft-events.html
@@ -16,7 +16,7 @@
               <p>
                 <a href="/summary-data/{{itemRow}}">Edit event</a> <br>
                 <a href="/clone-event/{{itemRow}}">Clone event</a>   <br>
-                <a href="#">Close registrations</a> <br>
+                <!-- <a href="#">Close registrations</a> <br> -->
                 <a href="#">Delete event</a>
               </p>
             </div>
