--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -23,7 +23,7 @@
 
 	  <br>
 
-	  <form action="/account" method="get" class="form">
+	  <form action="/create-event/preview" method="get" class="form">
 
 
 
@@ -46,19 +46,7 @@
 				  </dd>
 			  </div>
 
-			  <div>
-				  <dt class="cya-question">
-					  Time
-				  </dt>
-				  <dd class="cya-answer">
-					  {{ data['event-start-time'] }} to {{ data['event-finish-time'] }}
-				  </dd>
-				  <dd class="cya-change">
-					  <a href="/create-event/change-date">
-						  Change
-					  </a>
-				  </dd>
-			  </div>
+
 
 			  <div>
 				  <dt class="cya-question">
@@ -73,6 +61,23 @@
 					  </a>
 				  </dd>
 			  </div>
+
+
+			  <div>
+				  <dt class="cya-question">
+					  Time
+				  </dt>
+				  <dd class="cya-answer">
+					  {{ data['event-start-time'] }} to {{ data['event-finish-time'] }}
+				  </dd>
+				  <dd class="cya-change">
+					  <a href="/create-event/change-date">
+						  Change
+					  </a>
+				  </dd>
+			  </div>
+
+
 
 			  <div>
 				  <dt class="cya-question">
@@ -210,6 +215,18 @@
 				  </dd>
 			  </div>
 			  {% endif %}
+
+			  <div>
+				  <dt class="cya-question">
+					  Share draft event page
+				  </dt>
+				  <dd class="cya-answer">www.great.gov.uk/event/mh43dz</dd>
+				  <dd class="cya-change">
+
+
+					  </a>
+				  </dd>
+			  </div>
 
 		  </dl>
 
